--- a/30DaysCommitment/src/main/webapp/WEB-INF/web.xml
+++ b/30DaysCommitment/src/main/webapp/WEB-INF/web.xml
@@ -34,4 +34,14 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>default</servlet-name>
+        <servlet-class>org.eclipse.jetty.servlet.DefaultServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/static/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
