--- a/30DaysCommitment/pom.xml
+++ b/30DaysCommitment/pom.xml
@@ -8,7 +8,10 @@
   <name>30DaysCommitment Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <ob1k.version>0.45</ob1k.version>
+    <ob1k.version>0.64</ob1k.version>
+    <spring.social.version>1.1.0.RELEASE</spring.social.version>
+    <spring.version>4.1.6.RELEASE</spring.version>
+    <spring.security.version>4.0.0.RELEASE</spring.security.version>
   </properties>
   <dependencies>
     <dependency>
@@ -17,6 +20,8 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- ob1k -->
     <dependency>
       <groupId>com.outbrain.swinfra</groupId>
       <artifactId>ob1k-jetty</artifactId>
@@ -27,11 +32,63 @@
       <artifactId>util-metrics</artifactId>
       <version>${ob1k.version}</version>
     </dependency>
+
+    <!-- spring -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>4.1.6.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <!-- spring social -->
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-core</artifactId>
+      <version>${spring.social.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-config</artifactId>
+      <version>${spring.social.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-web</artifactId>
+      <version>${spring.social.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.social</groupId>
+      <artifactId>spring-social-facebook</artifactId>
+      <version>${spring.social.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring4</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.175</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
@@ -43,6 +100,7 @@
       <version>1.7.12</version>
     </dependency>
   </dependencies>
+
   <pluginRepositories>
     <pluginRepository>
       <releases>
@@ -56,6 +114,7 @@
       <url>http://repo1.maven.org/maven2</url>
     </pluginRepository>
   </pluginRepositories>
+
   <build>
     <finalName>30DaysCommitment</finalName>
     <plugins>
@@ -75,4 +134,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
